# sagemaker-huggingface

./: README.md  imdb-train-inference.ipynb  pyproject.toml
smhf/: train.py
