[tool.poetry]
name = "smhf"
version = "0.1.0"
description = ""
authors = ["Lisa Nishiyama <lisa.nishiyama@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
sagemaker = ">=2.48.0"
transformers = "4.12.3"
datasets = {extras = ["s3"], version = "1.18.3"}
jupyter = "^1.0.0"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
